--- a/tailwind/src/index.css
+++ b/tailwind/src/index.css
@@ -1,16 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(83, 83, 83, 0.87);
-  background-color: #e0e0e0;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@theme {
+  --color-primary: oklch(64.5% 0.246 16.439);
 }
