--- a/Dark mode/src/index.css
+++ b/Dark mode/src/index.css
@@ -1,27 +1,30 @@
 @import "tailwindcss";
 :root {
-  
-  --background: var(--color-neutral-950);
-  --foreground: var(--color-neutral-50);
+  --background: var(--color-neutral-50);
+  --foreground: var(--color-neutral-950);
   --pattern-fg: rgba(117, 219, 250, 0.925);
 }
 
 .dark {
   --pattern-fg: rgb(255, 254, 254);
-  --background: var(--color-neutral-50);
-  --foreground: var(--color-neutral-950);
+  --background: var(--color-neutral-950);
+  --foreground: var(--color-neutral-50);
 }
 
+@theme {
+  --animate-marquee: marquee 4s linear infinite;
 
-@theme{
-  --animate-marquee : marquee 4s linear infinite;
-
-  @keyframes marquee{
-    from{
-      transform : translateX(-100%);
+  @keyframes marquee {
+    from {
+      transform: translateX(-100%);
     }
-    to{
-      transform : translateX(100%);  
+    to {
+      transform: translateX(100%);
     }
   }
+}
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
 }
